k8s/whispr/prod/mobile-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-web
  namespace: whispr-prod
  labels:
    app: mobile-web
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: mobile-web
  template:
    metadata:
      labels:
        app: mobile-web
    spec:
      containers:
        - name: mobile-web
          image: ghcr.io/whispr-messenger/mobile-app/mobile-web:sha-4bd3396
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3020
          readinessProbe:
            httpGet:
              path: /
              port: 3020
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 200m
